force-app/main/default/objects/SalesBudgetRecord__c/SalesBudgetRecord__c.object-meta.xml
<CustomObject>
    <label>Sales Budget Record</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Record ID Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Budget Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>