force-app/main/default/objects/SalesBudgetRecord__c/fields/BudgetRecordID__c.field-meta.xml
<CustomField>
    <fullName>BudgetRecordID__c</fullName>
    <label>Budget Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>