force-app/main/default/objects/SalesBudgetRecord__c/fields/CoatingType__c.field-meta.xml
<CustomField>
    <fullName>CoatingType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coating Type</label>
    <referenceTo>CoatingType__c</referenceTo>
    <relationshipName>SalesBudget</relationshipName>
    <type>Lookup</type>
</CustomField>