force-app/main/default/objects/SalesBudgetRecord__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Margin on total amount of product</description>
    <inlineHelpText>Margin on total amount of product</inlineHelpText>
    <label>Margin (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>