force-app/main/default/objects/SalesBudgetRecord__c/fields/Margin_t__c.field-meta.xml
<CustomField>
    <fullName>Margin_t__c</fullName>
    <label>Margin per t (USD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>