force-app/main/default/objects/SalesBudgetRecord__c/fields/PeriodQuarter__c.field-meta.xml
<CustomField>
    <fullName>PeriodQuarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Q1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Q2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Q3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Q4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>