force-app/main/default/objects/SalesBudgetRecord__c/fields/PeriodYear__c.field-meta.xml
<CustomField>
    <fullName>PeriodYear__c</fullName>
    <defaultValue>Year(DATEVALUE($System.OriginDateTime))</defaultValue>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>