force-app/main/default/objects/SalesBudgetRecord__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price per metric ton</description>
    <inlineHelpText>Price per metric ton</inlineHelpText>
    <label>Price (per t)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>