force-app/main/default/objects/SalesBudgetRecord__c/fields/ProductionAmount__c.field-meta.xml
<CustomField>
    <fullName>ProductionAmount__c</fullName>
    <description>Amount of production in metric tons</description>
    <inlineHelpText>Amount of production in metric tons</inlineHelpText>
    <label>Dispatched Amount (t)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>