force-app/main/default/objects/SalesBudgetRecord__c/fields/QuotaType__c.field-meta.xml
<CustomField>
    <fullName>QuotaType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Type</label>
    <referenceTo>QuotaType__c</referenceTo>
    <relationshipName>SalesBudget</relationshipName>
    <type>Lookup</type>
</CustomField>