force-app/main/default/objects/SalesBudgetRecord__c/fields/SalesAmount__c.field-meta.xml
<CustomField>
    <fullName>SalesAmount__c</fullName>
    <description>Amount of products that have been sold and shipped to the client</description>
    <inlineHelpText>Amount of products that have been sold and shipped to the client</inlineHelpText>
    <label>Sales Amount (t)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>