force-app/main/default/objects/SalesBudgetRecord__c/fields/SalesBudget__c.field-meta.xml
<CustomField>
    <fullName>SalesBudget__c</fullName>
    <label>Sales Budget</label>
    <referenceTo>SalesBudget__c</referenceTo>
    <relationshipLabel>Sales Budget Records</relationshipLabel>
    <relationshipName>Sales_Budget_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>