force-app/main/default/objects/SalesBudgetRecord__c/fields/TubeEnds__c.field-meta.xml
<CustomField>
    <fullName>TubeEnds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube Ends</label>
    <referenceTo>TubeEnds__c</referenceTo>
    <relationshipName>SalesBudget</relationshipName>
    <type>Lookup</type>
</CustomField>