force-app/main/default/objects/SalesBudgetRecord__c/fields/TubeOD_Max__c.field-meta.xml
<CustomField>
    <fullName>TubeOD_Max__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Max OD</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipName>SalesBudget_TubeOD_Max</relationshipName>
    <type>Lookup</type>
</CustomField>