force-app/main/default/objects/SalesBudgetRecord__c/fields/TubeOD_Min__c.field-meta.xml
<CustomField>
    <fullName>TubeOD_Min__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Min OD</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipName>SalesBudget</relationshipName>
    <type>Lookup</type>
</CustomField>