force-app/main/default/objects/SalesBudgetRecord__c/fields/TubeWT_Max__c.field-meta.xml
<CustomField>
    <fullName>TubeWT_Max__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Max WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipName>SalesBudget_TubeWT_Max</relationshipName>
    <type>Lookup</type>
</CustomField>