force-app/main/default/objects/SalesBudgetRecord__c/fields/TubeWT_Min__c.field-meta.xml
<CustomField>
    <fullName>TubeWT_Min__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Min WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipName>SalesBudget_TubeWT_Min</relationshipName>
    <type>Lookup</type>
</CustomField>