force-app/main/default/objects/SalesBudgetRecord__c/recordTypes/PlanMonth.recordType-meta.xml
<RecordType>
    <fullName>PlanMonth</fullName>
    <active>true</active>
    <label>Plan Month</label>
</RecordType>