force-app/main/default/objects/SalesBudgetRecord__c/recordTypes/PlanQuarter.recordType-meta.xml
<RecordType>
    <fullName>PlanQuarter</fullName>
    <active>true</active>
    <label>Plan Quarter</label>
</RecordType>