force-app/main/default/objects/SalesBudgetRecord__c/validationRules/PeriodValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PeriodValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Or(Period__c &lt; SalesBudget__r.PeriodBeginning__c, Period__c &gt; SalesBudget__r.PeriodEnd__c)</errorConditionFormula>
    <errorDisplayField>Period__c</errorDisplayField>
    <errorMessage>The period is out of range that is specified in parent object</errorMessage>
</ValidationRule>