force-app/main/default/objects/SalesBudgetRecord__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesBudget__c</columns>
    <columns>Period__c</columns>
    <columns>SalesManager__c</columns>
    <columns>Shop__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Country__c</columns>
    <columns>QuotaType__c</columns>
    <columns>Account__c</columns>
    <columns>Production_Amount__c</columns>
    <columns>ProductionAmount__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Margin__c</columns>
    <columns>Product__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>